Java 21 release day: finish String Templates